--- a/Milestone_01 (1).ipynb
+++ b/Milestone_01 (1).ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,9 +656,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "# One-hot encode remaining categorical features\n",
     "df_final = pd.get_dummies(df_clean, columns=['propertyzoningdesc', 'regionidcity'], drop_first=True)"
@@ -690,7 +702,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# correlation matrix\n",
+    "corr_matrix = df_final.corr(numeric_only=True)\n",
+    "plt.figure(figsize=(15, 10))\n",
+    "sns.heatmap(corr_matrix, annot=True, fmt=\".2f\", cmap=\"coolwarm\", center=0)\n",
+    "plt.title(\"Feature Correlation Matrix\")\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot top features by F-statistic\n",
+    "X = df_final.drop(columns=['taxvaluedollarcnt'])\n",
+    "y = df_final['taxvaluedollarcnt']\n",
+    "f_scores = f_regression(X, y)[0]\n",
+    "pd.Series(f_scores, index=X.columns).sort_values(ascending=False).head(5).plot(\n",
+    "    kind='barh', figsize=(10, 6), title='Top Features by F-statistic'\n",
+    ")\n",
+    "plt.xlabel(\"F-score\")\n",
+    "plt.show()\n",
+    "\n",
+    "# Forward/backward feature selection \n",
+    "selector = SelectKBest(f_regression, k=2)\n",
+    "X_new = selector.fit_transform(X, y)\n",
+    "selected_features = X.columns[selector.get_support()]\n",
+    "print(\"Top 10 features from SelectKBest:\", selected_features.tolist())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -701,6 +736,13 @@
     "Pay particular attention to especially interesting and/or strongly correlated feature relationships. \n",
     " How do the different methods for seeing relationships compare? Do they agree or disagree?\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The correlation matrix shows that a home's size (**living area**) is the strongest factor linked to its tax value. **Bathrooms** and **bedrooms** also matter, but a bit less. **Location** has some impact too, though it's weaker. The F-statistic analysis mostly agrees—size is the top feature, followed by bathrooms. Interestingly, **year built** shows up as more important in the F-test than in the correlation, meaning it might affect value in more complex ways. Overall, both methods highlight similar key features, but the F-test gives a better picture of true predictive power.\n"
    ]
   },
   {
@@ -718,13 +760,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Living Area vs. Tax Value\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.scatterplot(data=df_final, x='calculatedfinishedsquarefeet', y='taxvaluedollarcnt', alpha=0.3)\n",
+    "plt.title(\"Living Area vs. Tax Value\")\n",
+    "plt.xlabel(\"Square Feet\")\n",
+    "plt.ylabel(\"Tax Value ($)\")\n",
+    "plt.show()\n",
+    "# Bedrooms vs. Bathrooms\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.boxplot(data=df_final, x='bedroomcnt', y='bathroomcnt')\n",
+    "plt.title(\"Bedrooms vs. Bathrooms\")\n",
+    "plt.xlabel(\"Bedrooms\")\n",
+    "plt.ylabel(\"Bathrooms\")\n",
+    "plt.show()\n",
+    "# Year Built vs. Tax Value\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.regplot(data=df_final, x='yearbuilt', y='taxvaluedollarcnt', \n",
+    "            scatter_kws={'alpha': 0.2}, line_kws={'color': 'red'})\n",
+    "plt.title(\"Year Built vs. Tax Value\")\n",
+    "plt.xlabel(\"Year Built\")\n",
+    "plt.ylabel(\"Tax Value ($)\")\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### **4.B Discussion:** Provide brief interpretations of any observed patterns or trends.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- larger homes generally have higher tax values, but with diminishing returns for very large properties (>5,000 sq. ft).\n",
+    "- Bathrooms scale linearly with bedrooms (e.g., 3-bed homes typically have 2–3 baths), but outliers exist (e.g., 1-bed homes with 3 baths), possibly indicating data errors or luxury units.\n",
+    "- Newer homes (post-2000) tend to have higher values, but pre-1950 homes also show a secondary peak—likely due to historic property premiums or location effects."
    ]
   },
   {
@@ -758,14 +832,70 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_final' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#  Log Transformation for Right-Skewed Features\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# Apply log to target and living area to address skewness\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m df_fe = \u001b[43mdf_final\u001b[49m.copy()\n\u001b[32m      4\u001b[39m df_fe[\u001b[33m'\u001b[39m\u001b[33mlog_taxval\u001b[39m\u001b[33m'\u001b[39m] = np.log1p(df_fe[\u001b[33m'\u001b[39m\u001b[33mtaxvaluedollarcnt\u001b[39m\u001b[33m'\u001b[39m])\n\u001b[32m      5\u001b[39m df_fe[\u001b[33m'\u001b[39m\u001b[33mlog_sqft\u001b[39m\u001b[33m'\u001b[39m] = np.log1p(df_fe[\u001b[33m'\u001b[39m\u001b[33mcalculatedfinishedsquarefeet\u001b[39m\u001b[33m'\u001b[39m])\n",
+      "\u001b[31mNameError\u001b[39m: name 'df_final' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#  Log Transformation for Right-Skewed Features\n",
+    "# Apply log to target and living area to address skewness\n",
+    "df_fe = df_final.copy()\n",
+    "df_fe['log_taxval'] = np.log1p(df_fe['taxvaluedollarcnt'])\n",
+    "df_fe['log_sqft'] = np.log1p(df_fe['calculatedfinishedsquarefeet'])\n",
+    "\n",
+    "# Check new distributions\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(12, 4))\n",
+    "sns.histplot(df_fe['log_taxval'], ax=axes[0], kde=True)\n",
+    "axes[0].set_title(\"Log(Tax Value)\")\n",
+    "sns.histplot(df_fe['log_sqft'], ax=axes[1], kde=True)\n",
+    "axes[1].set_title(\"Log(Living Area)\")\n",
+    "plt.show()\n",
+    "\n",
+    "# Polynomial Features for Non-Linear Relationships\n",
+    "# Add squared terms for yearbuilt and bedroomcnt\n",
+    "df_fe['yearbuilt_sq'] = df_fe['yearbuilt'] ** 2\n",
+    "df_fe['bedroom_sq'] = df_fe['bedroomcnt'] ** 2\n",
+    "\n",
+    "# Check F-scores for new features\n",
+    "X_fe = df_fe.drop(columns=['taxvaluedollarcnt', 'log_taxval'])\n",
+    "y_fe = df_fe['log_taxval']\n",
+    "new_f_scores = f_regression(X_fe, y_fe)[0]\n",
+    "pd.Series(new_f_scores, index=X_fe.columns).sort_values(ascending=False).head(10)\n",
+    "\n",
+    "# Create interaction: living area × bedrooms\n",
+    "df_fe['sqft_x_bedrooms'] = df_fe['calculatedfinishedsquarefeet'] * df_fe['bedroomcnt']\n",
+    "\n",
+    "# Validate with correlation\n",
+    "print(\"Correlation of interaction term with target:\", \n",
+    "      df_fe['sqft_x_bedrooms'].corr(df_fe['log_taxval']))\n",
+    "\n",
+    "# Scale numerical features (excluding target and encoded categoricals)\n",
+    "num_cols = df_fe.select_dtypes(include=['int64', 'float64']).columns\n",
+    "scaler = StandardScaler()\n",
+    "df_fe[num_cols] = scaler.fit_transform(df_fe[num_cols])"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### **5 Discussion:** Describe in a paragraph why you chose these transformations and what you observed. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I applied several data transformations to handle issues we noticed earlier. Log transforms helped fix skewed data and made relationships more linear. I also added polynomial terms to capture non-linear patterns, like the U-shape seen with the year a home was built. Interaction terms showed how some features work together—like bigger homes with more bedrooms affecting value more. Log transforms had the biggest impact, while only one polynomial feature (year built squared) was useful. "
    ]
   },
   {
